--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@ sup {font-size:0.5em;color:#00AEED;}
 </div>
 
 <div style="line-height:0.5em;">
-<p>紧急：本站 带域名整站出售！微信：okduang</p>
-<p>紧急：本站 带域名整站出售！微信：okduang</p>
-<p>紧急：本站 带域名整站出售！微信：okduang</p>
+    <p>直接复制了v0v.bid(doge)，如大佬介意请联系Q3602004600
+<!-- <p>紧急：本站 带域名整站出售！微信：okduang</p> -->
+<!-- <p>紧急：本站 带域名整站出售！微信：okduang</p> -->
+<!-- <p>紧急：本站 带域名整站出售！微信：okduang</p> -->
 </div>
 
 <div style="line-height:2.2em;">
